--- a/demo/index.html
+++ b/demo/index.html
@@ -29,8 +29,7 @@
             </ul>
         </div>
     </div>
-    <script src="./js/build/vendor.min.js"></script>
-    <script src="./js/build/script.min.js"></script>
+    <script src="./js/vendor/knockout-3.3.0.js"></script>
 </body>
 
 </html>
